sandbox/output
Anagram.java:7: error: cannot find symbol
        return Arrays.asList(string,string.subString(1) + string.subString(0, 1));
                                          ^
  symbol:   method subString(int)
  location: variable string of type String
Anagram.java:7: error: cannot find symbol
        return Arrays.asList(string,string.subString(1) + string.subString(0, 1));
                                                                ^
  symbol:   method subString(int,int)
  location: variable string of type String
2 errors
